--- a/force-app/main/default/classes/CommunityService.cls
+++ b/force-app/main/default/classes/CommunityService.cls
@@ -252,6 +252,10 @@ public without sharing class CommunityService {
                         MailingLatitude,
                         MailingLongitude,
                         MailingCountry,
+                        MailingCity,
+                        MailingPostalCode,
+                        MailingState,
+                        MailingStreet,
                         Account.BillingCountry,
                         Account.OwnerId,
                         PI_My_Studies_Filters__c,
