--- a/force-app/main/default/classes/StudySiteVisitConfigRemote.cls
+++ b/force-app/main/default/classes/StudySiteVisitConfigRemote.cls
@@ -268,6 +268,7 @@ public without sharing class StudySiteVisitConfigRemote {
         for(Study_Site__c ss : studySites) ssIds.add(ss.Id);
         Map<Id, List<StudySiteVisitPlan__c>> ssVisitPlansBySSId = getStudySiteVisitPlansMap(ssIds);
 
+        Map<Id, Visit_Plan__c> visitPlans = getVisitPlansMap();
         List<ApprovedLangRemote.StudySiteItem> studySiteItems = new List<ApprovedLangRemote.StudySiteItem>();
         for (Study_Site__c ss : studySites) {
             String countryName = ss.Site__r.BillingCountry;
@@ -279,7 +280,7 @@ public without sharing class StudySiteVisitConfigRemote {
                     ssVisitPlansBySSId.containsKey(ss.Id) ? ssVisitPlansBySSId.get(ss.Id) : new List<StudySiteVisitPlan__c>();
             item.emptyAssignments = studySiteVisitPlans.isEmpty();
 
-            for (Id vpId : getVisitPlansMap().keySet()) {
+            for (Id vpId : visitPlans.keySet()) {
                 if ((selectedVPIds == null || selectedVPIds.isEmpty()) || (!selectedVPIds.isEmpty() && selectedVPIds.contains(vpId))) {
                     Boolean selected = false;
                     for (StudySiteVisitPlan__c ssVP : studySiteVisitPlans) {
