--- a/force-app/main/default/classes/EmailActionBtnController.cls
+++ b/force-app/main/default/classes/EmailActionBtnController.cls
@@ -5,11 +5,11 @@
 global without sharing class EmailActionBtnController {
     
     global String buttonURLString {get; set;}
-    global String sObjIdSting {get; set;}
+    global String objIdString {get; set;}
 
     public String getResultURL(){
         String result = buttonURLString;
-        if (String.isBlank(sObjIdSting)) {
+        if (String.isBlank(objIdString)) {
             if(result == null) result = '';
 
             if(!result.containsIgnoreCase('http')){
@@ -17,7 +17,7 @@ global without sharing class EmailActionBtnController {
                 result = getCurrentCommunityURL() + result;
             }
         } else {
-            result = Url.getOrgDomainUrl().toExternalForm() + '/' + sObjIdSting;
+            result = Url.getOrgDomainUrl().toExternalForm() + '/' + objIdString;
         }
 
         return result;
