RP Invited By PI

--- a/force-app/main/default/classes/ReferHealthcareProviderRemote.cls
+++ b/force-app/main/default/classes/ReferHealthcareProviderRemote.cls
@@ -91,6 +91,7 @@ global without sharing class ReferHealthcareProviderRemote {
                     Email = email,
                     AccountId = studySite.Site__c,
                     Language__c = UserInfo.getLanguage(),
+                    RP_Invited_By_PI__c = true,
                     MailingCountry = studySite.Site__r.BillingCountry));
             insert cntList;
         }
