TrialSearch tests + refactoring

--- a/force-app/main/default/classes/TrialSearchHelper.cls
+++ b/force-app/main/default/classes/TrialSearchHelper.cls
@@ -6,6 +6,9 @@ public with sharing class TrialSearchHelper {
     //Site Type
     public static final String QCARE_TYPE = '00';
 
+    //COI
+    private static final String COI_REC_TYPE = 'Condition_of_Interests';
+
     //Queue
     private static final String QUEUE = 'Queue';
     private static final String PEH_CASE_QUEUE_NAME = 'PEH Case Queue';
@@ -88,28 +91,18 @@ public with sharing class TrialSearchHelper {
             filter += 'AND Name LIKE \'%' + searchText + '%\' ';
         }
         if (selectedCoisIds != null && !selectedCoisIds.isEmpty()) {
-            filter += 'AND Id NOT IN (';
-            for (String selectedCoisId : selectedCoisIds) {
-                filter += '\'' + selectedCoisId + '\', ';
-            }
-            filter += ') ';
-            filter = filter.replace(', )', ')');
+            filter += 'AND Id NOT IN (\'' + String.join(selectedCoisIds, '\',\'') + '\') ';
         }
         String query = 'SELECT ' +
                 'Id, ' +
                 'Name, ' +
                 'Therapeutic_Area__c ' +
                 'FROM Therapeutic_Area__c ' +
-                'WHERE RecordType.DeveloperName = \'Condition_of_Interests\' ' +
+                'WHERE RecordType.DeveloperName = \'' + COI_REC_TYPE + '\' ' +
                 filter +
                 'LIMIT 5';
         List<Therapeutic_Area__c> therapeuticArea = (List<Therapeutic_Area__c>) proxy.query(query, true);
         return therapeuticArea;
-    }
-
-    public void upsertTaps(List<Therapeutic_Area_Patient__c> taps) {
-        DatabaseProxy proxy = ((DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class));
-        proxy.upsertRecords(taps, false);
     }
 
     public void createCaseAndSendNotification(Participant__c participant, Clinical_Trial_Profile__c ctp) {
@@ -194,7 +187,8 @@ public with sharing class TrialSearchHelper {
     private List<Clinical_Trial_Profile__c> getCtps(Set<Id> taId, DatabaseProxy proxy, Boolean isEnrolling, Boolean isNotYetEnrolling) {
         Set<String> contactLanguage = this.getContactLanguage(proxy);
         Set<Id> ssIds = getUsersQCareSiteIds(proxy);
-        String whereClause = new TrialSearchWhereClauseFactory().getInstance(new List<Id>(taId), isEnrolling, isNotYetEnrolling, ssIds).getWhereClause();
+        TrialSearchWhereClauseFactory factory = (TrialSearchWhereClauseFactory) ClassFactory.newInstance(TrialSearchWhereClauseFactory.class);
+        String whereClause = factory.getInstance(new List<Id>(taId), isEnrolling, isNotYetEnrolling, ssIds).getWhereClause();
         String orderBy = ' ORDER BY Enrollment_Start_Date__c';
         String queryCTP = 'SELECT ' +
                 'Therapeutic_Area__c, ' +
@@ -280,11 +274,13 @@ public with sharing class TrialSearchHelper {
 
     @TestVisible
     private Set<Id> getUsersQCareSiteIds(DatabaseProxy proxy) {
+        CommunityService cService = (CommunityService) ClassFactory.newInstance(CommunityService.class);
+        String contactId = cService.getCurrentContactId();
         String query = 'SELECT Id, ' +
                 'Study_Site__c ' +
                 'FROM Participant_Enrollment__c ' +
                 'WHERE Study_Site__r.Partner_Type__c = \'' + QCARE_TYPE + '\' ' +
-                'AND Participant__r.Contact__c = \'' + CommunityService.getUserContact().Id + '\'' +
+                'AND Participant__r.Contact__c = \'' + contactId + '\'' +
                 'AND Participant_Status__c IN (\'' + String.join(PS_ES, '\',\'') + '\')';
         List<Participant_Enrollment__c> participantEnrollments = (List<Participant_Enrollment__c>) proxy.query(query, true);
         Set<Id> ssIds = new Set<Id>();
