--- a/force-app/main/tests/classes/Test_TrialSearchContainerRemote.cls
+++ b/force-app/main/tests/classes/Test_TrialSearchContainerRemote.cls
@@ -8,8 +8,6 @@ private class Test_TrialSearchContainerRemote {
     @IsTest
     static void getSearchCTPs_test() {
         TrialSearchContainerRemote.TrialSearchContainer container = makeTsContainer();
-
-
         ClassFactory.clearStubTypesByClassNamesMap();
         ClassFactory.putStubTypeByClassName(TrialSearchHelper.class, StubBuilder.newInstance(TrialSearchHelper.class)
                 .when('getInitTrialSearchContainer')
@@ -22,8 +20,6 @@ private class Test_TrialSearchContainerRemote {
     @IsTest
     static void getFilterSearchCTPs_test() {
         TrialSearchContainerRemote.TrialSearchContainer container = makeTsContainer();
-
-
         ClassFactory.clearStubTypesByClassNamesMap();
         ClassFactory.putStubTypeByClassName(TrialSearchHelper.class, StubBuilder.newInstance(TrialSearchHelper.class)
                 .when('getTrialSearchContainer')
@@ -33,12 +29,46 @@ private class Test_TrialSearchContainerRemote {
         System.assertEquals(1, TrialSearchContainerRemote.getFilterSearchCTPs(null, null, null).trialTDOs.size());
     }
 
+    @IsTest
+    static void getSearchCTPsWithException_test() {
+        Boolean isExceptionThrown = false;
+        ClassFactory.clearStubTypesByClassNamesMap();
+        ClassFactory.putStubTypeByClassName(TrialSearchHelper.class, StubBuilder.newInstance(TrialSearchHelper.class)
+                .when('getInitTrialSearchContainer')
+                .then(new AuraHandledException(''))
+                .build()
+        );
+        try{
+            TrialSearchContainerRemote.getSearchCTPs();
+        } catch (AuraHandledException e){
+            isExceptionThrown = true;
+            System.assert(e.getTypeName() == 'System.AuraHandledException');
+        }
+        System.assert(true, isExceptionThrown);
+    }
+
+    @IsTest
+    static void getFilterSearchCTPs_Exception_test() {
+        Boolean isExceptionThrown = false;
+        ClassFactory.clearStubTypesByClassNamesMap();
+        ClassFactory.putStubTypeByClassName(TrialSearchHelper.class, StubBuilder.newInstance(TrialSearchHelper.class)
+                .when('getTrialSearchContainer')
+                .then(new AuraHandledException(''))
+                .build()
+        );
+        try{
+            TrialSearchContainerRemote.getFilterSearchCTPs(null, null, null);
+        } catch (AuraHandledException e){
+            isExceptionThrown = true;
+            System.assert(e.getTypeName() == 'System.AuraHandledException');
+        }
+        System.assert(true, isExceptionThrown);
+    }
+
 
     private static TrialSearchContainerRemote.TrialSearchContainer makeTsContainer() {
         TrialSearchContainerRemote.TrialTDO tdo = new TrialSearchContainerRemote.TrialTDO();
-        tdo.ctp = (Clinical_Trial_Profile__c) TestDataFactory.getSObject(Clinical_Trial_Profile__c.getSObjectType(),
-                new Map<String, Object>{
-                        'Visit_Plan__c' => TestDataFactory.getFakeId(Visit_Plan__c.getSObjectType())});
+        tdo.ctp = (Clinical_Trial_Profile__c) TestDataFactory.getSObject(Clinical_Trial_Profile__c.getSObjectType());
         tdo.relatedNotificationExists = true;
         tdo.isEnrollingCTP = true;
         TrialSearchContainerRemote.TrialSearchContainer container = new TrialSearchContainerRemote.TrialSearchContainer();
@@ -48,7 +78,6 @@ private class Test_TrialSearchContainerRemote {
 
         return container;
     }
-
 
 
 }
